Fixing externalsecrets issues.

--- a/charts/hoslog/templates/externalsecrets.yaml
+++ b/charts/hoslog/templates/externalsecrets.yaml
@@ -9,7 +9,7 @@ spec:
   refreshInterval: {{ .Values.secretsToFile.refreshInterval | default "10s" }}
   secretStoreRef:
     name: {{ .Values.secretsToFile.secretStore.name | default "secretstore" }}
-    kind: {{ .Values..secretsToFile.secretStore.kind | default "SecretStore" }}
+    kind: {{ .Values.secretsToFile.secretStore.kind | default "SecretStore" }}
   # {{- if .Values.envFromSecret.enabled }}
   # dataFrom:
   #   {{ include "secrets.fromSecret" . | nindent 4 }}
