--- a/charts/hoslog/templates/deployment.yaml
+++ b/charts/hoslog/templates/deployment.yaml
@@ -23,9 +23,9 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      {{- with .Values.imagePullSecrets }}
+      {{- with .Values.image.pullSecrets | default "gitlab-regcred" }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+        - name: {{ . | quote }}
       {{- end }}
       serviceAccountName: {{ include "hoslog.serviceAccountName" . }}
       securityContext:
