--- a/charts/hoslog/values.yaml
+++ b/charts/hoslog/values.yaml
@@ -72,14 +72,14 @@ resources:
     cpu: 100m
     memory: 128Mi
 
-livenessProbe:
-  httpGet:
-    path: /health
-    port: http
-readinessProbe:
-  httpGet:
-    path: /health
-    port: http
+# livenessProbe:
+#   httpGet:
+#     path: /health
+#     port: http
+# readinessProbe:
+#   httpGet:
+#     path: /health
+#     port: http
 
 autoscaling:
   enabled: false
