Fixing ExternalSecret issue.

--- a/charts/hoslog/templates/externalsecrets.yaml
+++ b/charts/hoslog/templates/externalsecrets.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "hoslog.labels" . | nindent 4 }}
   name: {{ include "hoslog.fullname" . }}
 spec:
-  refreshInterval: {{ .Values.secretsToFile.refreshInterval | default "10s" }}
+  refreshInterval: {{ .Values.secretsToFile.secretStore.refreshInterval | default "10s" }}
   secretStoreRef:
     name: {{ .Values.secretsToFile.secretStore.name | default "secretstore" }}
     kind: {{ .Values.secretsToFile.secretStore.kind | default "SecretStore" }}
