--- a/charts/hoslog/templates/deployment.yaml
+++ b/charts/hoslog/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "hoslog.fullname" . }}
   labels:
     {{- include "hoslog.labels" . | nindent 4 }}
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
