Changes for external secrets with extra vallues.

--- a/charts/hoslog/templates/externalsecrets.yaml
+++ b/charts/hoslog/templates/externalsecrets.yaml
@@ -10,6 +10,10 @@ spec:
   secretStoreRef:
     name: {{ .Values.secretsToFile.secretStore.name | default "secretstore" }}
     kind: {{ .Values.secretsToFile.secretStore.kind | default "SecretStore" }}
+  {{- if .Values.envFromSecret.enabled }}
+  dataFrom:
+    {{ include "env.fromSecret" . | nindent 4 }}
+  {{- end }}
   {{- if .Values.secretsToFile.enabled }}
   data:
     {{ include "secrets.fromFile" . | nindent 4 }}
