Or condition for external secrets.

--- a/charts/hoslog/templates/externalsecrets.yaml
+++ b/charts/hoslog/templates/externalsecrets.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.secretsToFile.enabled }}
+{{- if or .Values.secretsToFile.enabled .Values.envFromSecret.enabled}}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
